tests/exceptions/ill-typed/exception-type-not-declared-try-catch.stella
language core;

extend with #exceptions, #exception-type-declaration;

fn fail(n : Nat) -> Nat {
  return throw(succ(0))
}

fn main(n : Nat) -> Bool {
  return try {
    fail(n)
  } catch {
    a => succ(0)
  }
}
